--- a/react-redux/src/components/listPosts.css
+++ b/react-redux/src/components/listPosts.css
@@ -3,11 +3,14 @@
     border-radius: 4px;
     overflow: auto;
     padding: 8px 24px;
-    height: 500px;
+    height: 800px;
   }
 .demo-loading-container {
     position: absolute;
     bottom: 40px;
     width: 100%;
     text-align: center;
+}
+.new-post-button {
+    width: 100%;
 }
