--- a/react-redux-app/src/components/commentList.css
+++ b/react-redux-app/src/components/commentList.css
@@ -1,7 +1,7 @@
 .comment-infinite-container {
     border: 1px solid #e8e8e8;
     border-radius: 4px;
-    overflow: auto;
+    /* overflow: auto; */
     padding: 8px 24px;
-    height: 300px;
+    /* height: 380px; */
   }
